# ab

./: .clangd  .gitignore  CMakeLists.txt  README.md  auto.py  build.sh  compile_commands.json  main.cc  run.sh  valgrind.supp  vcpkg.json  verify.py
.cache/clangd/index/: basic_types.h.D2FD7FB716D7687A.idx  bop.h.20D79C28FBE95320.idx  calc.h.6A998824BFBD9B91.idx  data_op.h.AACB88C1003C10E1.idx  div.h.C7CAB2CD578231FD.idx  exit_code.h.1EF093A08F770880.idx  export.h.B0B954C93A6FB1B6.idx  flags.h.43747479490CF2EF.idx  gtest-assertion-result.h.2008FF5BC8023E09.idx  gtest-death-test-internal.h.402146E855657639.idx  gtest-death-test.h.1A4BE0F53B0E30EA.idx  gtest-filepath.h.9F5EA2BEA686F899.idx  gtest-internal.h.774486E69C247E28.idx  gtest-matchers.h.F880724E227E9366.idx  gtest-message.h.9D9070753DF6E160.idx  gtest-param-test.h.F13E7DF88654AE8A.idx  gtest-param-util.h.AC219CBA46B1E23B.idx  gtest-port-arch.h.3CCCA499279F846D.idx  gtest-port.h.DE5D130951B7E4D6.idx  gtest-port.h.F889CADF1D66ABDD.idx  gtest-printers.h.7E2939A1F768B660.idx  gtest-printers.h.7F96C083CB0D91EA.idx  gtest-string.h.C40664FD9E86BAE8.idx  gtest-test-part.h.6023918A3289311C.idx  gtest-type-util.h.B1462E061022430F.idx  gtest-typed-test.h.76C532AEF961E1E5.idx  gtest.h.775B271D4D7B8EF3.idx  gtest_pred_impl.h.D9B3758CF1102745.idx  gtest_prod.h.7CCE166A20E1D073.idx  log.h.328E1F5A17029914.idx  log_severity.h.CFF6F0F86A5ABFF0.idx  logging.h.E67FF2920A01C258.idx  main.cc.0B37901DEA494BC2.idx  methods.cc.E4FC9A67579527BD.idx  methods.h.D2967041F9E68DC7.idx  op.h.79A47A4033FD8C45.idx  platform.h.F07EFF22C5EBEB94.idx  pow.h.8725A5EB82E0A114.idx  shape.cc.2C11218479F71FA8.idx  shape.h.302EBB2D011CAF93.idx  (+7 more)
base/: CMakeLists.txt  basic_types.h  shape.cc  shape.h  tensor.h
calc/: calc.h
cmake/: AEConfig.cmake.in
include/: CMakeLists.txt
include/auto_engine/algo/: algo.h  grad_descent.h  loss.h  opt.h
include/auto_engine/base/: basic_types.h  exit_code.h  slice.h
include/auto_engine/calc/: calc.h
include/auto_engine/config/: config.h
include/auto_engine/cuda/: info.h  kernel.cuh  matrix_f64.h  matrix_kernel.cuh  mem.h  tensor.h
include/auto_engine/op/: add.h  add_n.h  bop.h  cat_split.h  concat_split.h  data_op.h  div.h  div_n.h  inv.h  link_op.h  log.h  methods.h  mmul.h  mul.h  mul_n.h  op.h  permute.h  pow.h  pow_n.h  reshape.h  sin_cos.h  sub.h  sub_n.h  sum_d_expand_d.h  sum_expand.h  sum_expand_along_col.h  sum_expand_along_row.h  transpose.h  uop.h  vaop.h
include/auto_engine/shape/: shape.h
include/auto_engine/tensor/: shape.h  tensor.h
include/auto_engine/utils/: defer.h  maths.h
op/: CMakeLists.txt  bop.h  data_op.h  div.h  log.h  methods.cc  op.h  pow.h  sin_cos.h  sub.h
py/: ae.pyi  auto.py  verify.py
src/: CMakeLists.txt  main.cc
src/algo/: CMakeLists.txt  adam.cc  grad_descent.cc  loss.cc  opt_adam.cc  opt_grad_descent.cc
src/base/: exit_code.h
src/cuda/: CMakeLists.txt  info.cu  matrix_f64.cu  mem.cu  mem.h  tensor.cu
src/op/: CMakeLists.txt  data_op.h  div.h  methods.cc  op.h
src/py/: CMakeLists.txt  tensor_f64.cc
src/shape/: CMakeLists.txt  shape.cc
src/tensor/: CMakeLists.txt  shape.cc  shape.h  tensor.h
src/utils/: CMakeLists.txt  defer.cc  maths.cc  tuple_utils.h  vec_utils.h
vcpkg/: portfile.cmake  vcpkg.json
